Book changed to record from class